# sass-analyzer

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  sass.ungram
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/sass-cli/: Cargo.toml
crates/sass-cli/src/: main.rs
crates/sass-lsp/: Cargo.toml
crates/sass-lsp/src/: ast_helpers.rs  builtins.rs  call_hierarchy.rs  code_actions.rs  colors.rs  completion.rs  config.rs  convert.rs  css_properties.rs  css_values.rs  diagnostics.rs  folding.rs  highlights.rs  hover.rs  inlay_hints.rs  main.rs  navigation.rs  sassdoc.rs  selection.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  tests.rs  worker.rs  workspace.rs
crates/sass-lsp/src/tests/: basics.rs  call_hierarchy.rs  completion.rs  config_commands.rs  diagnostics.rs  document_links.rs  empty_file.rs  folding_ranges.rs  goto_definition.rs  highlights.rs  hover.rs  inlay_hints.rs  mod.rs  references_rename.rs  sassdoc.rs  selection_ranges.rs  signature_help.rs  workspace_symbols.rs
crates/sass-parser/: Cargo.toml
crates/sass-parser/benches/: parse_benchmark.rs
crates/sass-parser/examples/: parse_file.rs
crates/sass-parser/fuzz/: Cargo.toml
crates/sass-parser/fuzz/fuzz_targets/: fuzz_lexer_crash.rs  fuzz_lexer_roundtrip.rs  fuzz_parser_crash.rs  fuzz_parser_roundtrip.rs
crates/sass-parser/src/: ast.rs  bridge.rs  event.rs  imports.rs  input.rs  lexer.rs  lib.rs  line_index.rs  main.rs  parser.rs  reparse.rs  resolver.rs  sass_lexer.rs  syntax.rs  syntax_kind.rs  text_range.rs  token_set.rs  vfs.rs
crates/sass-parser/src/ast/: generated.rs  mod.rs  support.rs
crates/sass-parser/src/grammar/: at_rules.rs  declarations.rs  expressions.rs  mod.rs  selectors.rs
crates/sass-parser/src/grammar/at_rules/: at_root.rs  control_flow.rs  css_at_rules.rs  diagnostics.rs  extend.rs  function.rs  media.rs  mixin.rs  use_forward.rs
crates/sass-parser/src/grammar/expressions/: atoms.rs  calculations.rs  functions.rs  mod.rs
crates/sass-parser/tests/: at_rule_tests.rs  corpus_test.rs  expression_tests.rs  imports_tests.rs  lexer_tests.rs  memory_countme.rs  memory_profile.rs  parser_snapshots.rs  parser_structural.rs  parser_tests.rs  reparse_tests.rs  resolver_tests.rs  sass_lexer_tests.rs  sass_spec_test.rs  syntax_kind_tests.rs  token_set_tests.rs
crates/sass-parser/tests/common/: mod.rs
crates/sass-parser/tests/fixtures/: golden.scss
crates/xtask/: Cargo.toml
crates/xtask/src/: codegen.rs  main.rs
editors/code/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
editors/code/src/: extension.ts
test-corpus/: download.sh  sass-spec-gaps.txt  sass-spec-sass-gaps.txt
