[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
text-size = "1.1"
rowan = "0.16"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
expect-test = "1.5"
divan = "0.1"
mimalloc = "0.1"
ungrammar = "1.16"
quote = "1"
proc-macro2 = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
similar_names = "allow"

[profile.bench]
lto = "thin"
