[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
description = "A fast SCSS language server and parser, built from scratch in Rust"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/mykhlv/sass-analyzer"
homepage = "https://github.com/mykhlv/sass-analyzer"
authors = ["sass-analyzer contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-size = "1.1"
rowan = "0.16"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
expect-test = "1.5"
countme = { version = "3.0", features = ["enable"] }
dhat = "0.3"
divan = "0.1"
mimalloc = "0.1"
ungrammar = "1.16"
quote = "1"
proc-macro2 = "1"
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
needless_raw_string_hashes = "allow"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
