[package]
name = "sass-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for sass-parser (debug, lex, lint)"
publish = false

[[bin]]
name = "sass-cli"
path = "src/main.rs"

[dependencies]
sass-parser = { path = "../sass-parser" }
clap.workspace = true
miette.workspace = true

[lints]
workspace = true
