[package]
name = "sass-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
text-size.workspace = true
rowan.workspace = true

[dev-dependencies]
expect-test.workspace = true
divan.workspace = true
mimalloc.workspace = true

[[bench]]
name = "parse_benchmark"
harness = false

[lints]
workspace = true
