[package]
name = "sass-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Hand-written, lossless SCSS parser following rust-analyzer's architecture"
keywords = ["scss", "sass", "css", "parser", "lsp"]
categories = ["parsing", "text-editors", "web-programming"]
readme = "../../README.md"
exclude = ["fuzz/", "tests/", "benches/"]

[dependencies]
text-size.workspace = true
rowan.workspace = true

[dev-dependencies]
countme.workspace = true
dhat.workspace = true
divan.workspace = true
expect-test.workspace = true
mimalloc.workspace = true

[[bench]]
name = "parse_benchmark"
harness = false

[lints]
workspace = true
